--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table cellspacing="10">
       <tr>
-        <td><img src="C:\Users\sr\Documents\Web Development\Angela Yu-modified.png" alt="Angela's profile"></td>
+        <td><img src="https://github.com/Morgan-Favour/cv/blob/main/Images/Angela%20Yu-modified.png?raw=true" alt="Angela's profile"></td>
         <td><h2>Angela Yu</h2>
         <p><em>Founder and CTO of the <strong><a href="https://appbrewery.com/">App Brewery</a></strong></em></p>
         <p>I am an IOS and Web Developer. I love coffe and brew my own beers.</p></td>
